--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}- VideoKlub</title>
     <!-- Uso de url_for para obtener la ruta de elementos de la página -->
-    <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='estilo.css' ) }} />
+    {% set url = url_for("static", filename="estilo.css") %}
+    <link rel="stylesheet" type="text/css" href={{ url }}>
     <script src="{{ url_for('static', filename='jquery.js') }}"></script>
     <script>
         $SCRIPT_ROOT = {{ request.script_root | tojson }};
@@ -27,19 +28,17 @@
     </div>
 
     <div class="side-bar">
-        <a href="{{ url_for('index') }}">
-            <button class="side">Home</button>
-        </a>
-        <a href="{{ url_for('carrito') }}"><button class="side">Carrito</button></a>
+        <button onclick="window.location.href='{{ url_for('index') }}'" class="side">Home</button>
+        <button onclick="window.location.href='{{ url_for('carrito') }}'" class="side">Carrito</button>
 
         {% if not session['usuario'] %}
-        <a href="{{ url_for('login') }}"><button class="side">Iniciar Sesion</button></a>
-        <a href="{{ url_for('registro') }}"><button class="side">Registro</button></a>
+        <button onclick="window.location.href='{{ url_for('login') }}'" class="side">Iniciar Sesion</button>
+        <button onclick="window.location.href='{{ url_for('registro') }}'" class="side">Registro</button>
 
         {% else %}
-        <a href="{{ url_for('historial') }}"><button class="side">Historial Compras</button></a>
-        <a href="{{ url_for('saldo') }}"><button class="side" id="saldo-side">Saldo:</button></a>
-        <a href="{{ url_for('logout') }}"><button class="side">Cerrar Sesion</button></a>
+        <button onclick="window.location.href='{{ url_for('historial') }}'" class="side">Historial Compras</button>
+        <button onclick="window.location.href='{{ url_for('saldo') }}'" class="side" id="saldo-side">Saldo:</button>
+        <button onclick="window.location.href='{{ url_for('logout') }}'" class="side">Cerrar Sesion</button>
         {% endif%}
     </div>
 
