--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -19,7 +19,7 @@
     <div class='page-title'>Iniciar sesión</div>
     <form action="" method="post">
         <label>Username: </label>
-        <input name="username" type="text" placeholder="Enter username" required>
+        <input name="username" type="text" placeholder="Enter username" value="{{ user }}" required>
         <label>Password: </label>
         <input name="password" type="password" placeholder="Enter password" required>
         <p>
