--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %}- VideoKlub</title>
+    <title>{% block title %} {% endblock %}- VideoClub</title>
     <!-- Uso de url_for para obtener la ruta de elementos de la página -->
     {% set url = url_for("static", filename="estilo.css") %}
     <link rel="stylesheet" type="text/css" href={{ url }}>
